# system_monitoring

./: .gitignore  README.md  cpu.py  format_test.py  main.py  memory.py  monitor.py  pyproject.toml  terminal_setup.py  topprocess.py
.github/workflows/: auto-format.yml
