[project]
name = "system-monitor-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.12.0",
    "docformatter>=1.7.7",
    "pynput>=1.8.1",
    "rich>=14.2.0",
    "ruff>=0.14.10",
]
[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
fix = true

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88
